--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
 	},
 	"homepage": "https://github.com/bergos/rdf-jsonify",
 	"dependencies": {
-		"es6-promise": ">=0.1.1",
-		"jsonld": ">=0.1.26"
+		"es6-promise": "=1.*",
+		"jsonld": "=0.2.*"
 	},
 	"readmeFilename": "README.md"
 }
